# app/lib/api/model/index.ts
@@ -40,22 +40,13 @@ export * from './customerOrderClient';
 export * from './customerOrderCustomer';
 export * from './customerOrderCustomerSmsMarketingConsent';
 export * from './customerOrderFulfillment';
-export * from './customerOrderGet';
-export * from './customerOrderGetAllOf';
+export * from './customerOrderGetByGroupIdResponse';
 export * from './customerOrderGetResponse';
 export * from './customerOrderLineItem';
-export * from './customerOrderLineItemLookup';
-export * from './customerOrderLineItemLookupAllOf';
-export * from './customerOrderLineItemLookupAllOfShipping';
-export * from './customerOrderLineItemLookupAllOfUser';
-export * from './customerOrderLineItemLookupAllOfUserImages';
-export * from './customerOrderLineItemLookupAllOfUserImagesProfile';
 export * from './customerOrderLineItemProperties';
 export * from './customerOrderMoney';
 export * from './customerOrderMoneyPresentmentMoney';
 export * from './customerOrderMoneyShopMoney';
-export * from './customerOrderRange';
-export * from './customerOrderRangeAllOf';
 export * from './customerOrderRangeParams';
 export * from './customerOrderRangeResponse';
 export * from './customerOrderRefund';
@@ -64,6 +55,11 @@ export * from './customerOrderRefundRefundLineItemsItemSubtotal';
 export * from './customerOrderRefundRefundLineItemsItemTotalTax';
 export * from './customerOrderShippingLines';
 export * from './customerOrderSimpleLineItem';
+export * from './customerOrderWithLookup';
+export * from './customerOrderWithLookupAllOf';
+export * from './customerOrderWithLookupAllOfUser';
+export * from './customerOrderWithLookupAllOfUserImages';
+export * from './customerOrderWithLookupAllOfUserImagesProfile';
 export * from './customerProduct';
 export * from './customerProductAllOf';
 export * from './customerProductBase';
